k8s/hr-namespace/hr-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-service-ingress
  namespace: hr
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /hr
        pathType: Prefix
        backend:
          service:
            name: hr-service
            port:
              number: 9024
